--- a/public/package.json
+++ b/public/package.json
@@ -15,7 +15,9 @@
     "dawa-util": "^0.1.9",
     "leaflet": "^1.2.0",
     "leaflet-contextmenu": "^1.4.0",
-    "proj4leaflet": "^1.0.2"
+    "proj4leaflet": "^1.0.2",
+    "query-string": "^5.1.1",
+    "url-parse": "^1.4.3"
   },
   "devDependencies": {
     "webpack": "^3.5.5",
