--- a/public/package.json
+++ b/public/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "devbuild": "npm install && webpack",
+    "devbuild": "npm install && webpack --config main.config.js && webpack --config multi.config.js",
     "lint": "jshint js/index.js & jshint js/dawa-ois-koder.js & jshint js/dawa-leaflet-grafik.js"
   },
   "author": "Finn Jordal",
@@ -20,7 +20,7 @@
     "url-parse": "^1.4.3"
   },
   "devDependencies": {
-    "webpack": "^3.5.5",
-    "jshint": "^2.9.5"
+    "jshint": "^2.10.1",
+    "webpack": "^3.5.5"
   }
 }
