--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/DanmarksAdresser/find.aws.dk.git"
+    "url": "git+https://github.com/Dataforsyningen/find2.aws.dk.git"
   },
   "author": "Finn Jordal",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/DanmarksAdresser/find.aws.dk/issues"
+    "url": "https://github.com/Dataforsyningen/find2.aws.dk/issues"
   },
-  "homepage": "https://github.com/DanmarksAdresser/find.aws.dk#readme",
+  "homepage": "https://github.com/Dataforsyningen/find2.aws.dk#readme",
   "dependencies": {
     "express": "^4.13.1",
     "g": "^2.0.1",
-    "kf-getticket": "^1.0.0",
+    "@dawadk/kf-getticket": "^1.0.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.1"
   },
