--- a/public/package.json
+++ b/public/package.json
@@ -11,8 +11,8 @@
   "author": "Finn Jordal",
   "license": "MIT",
   "dependencies": {
-    "dawa-kort": "^0.1.34",
-    "dawa-util": "^0.1.9",
+    "@dawadk/dawa-kort": "^0.1.55",
+    "@dawadk/dawa-util": "^0.1.15",
     "leaflet": "^1.2.0",
     "leaflet-contextmenu": "^1.4.0",
     "proj4leaflet": "^1.0.2",
